# farm-security

./: .gitignore  README.MD
Assembly/: sch_espcam_hc501_irLed.kicad_pcb  sch_espcam_hc501_irLed.kicad_prl  sch_espcam_hc501_irLed.kicad_pro  sch_espcam_hc501_irLed.kicad_sch
esp32-firmware/: publickey.pem
esp32-firmware-for-cam/: sdkconfig  sdkconfig.old  server_test.py
esp32-firmware-for-cam/main/: CMakeLists.txt  fsm_camera.c  fsm_hc_501.c  fsm_ir_led.c  fsm_mesh.c  fsm_power_save.c  fsm_sta.c  global.c  main.c  scheduler.c  tcp_processing.c
esp32-firmware-for-root/: 10-03-2024.txt  flask_server.py  sdkconfig  sdkconfig.old
esp32-firmware-for-root/main/: CMakeLists.txt  fsm_camera.c  fsm_http_client.c  fsm_mesh.c  fsm_power_save.c  fsm_sta.c  main.c  tcp_processing.c
esp32-firmware-no-external-ram/: sdkconfig  sdkconfig.old
esp32-firmware-no-external-ram/main/: fsm_ap.c  fsm_http_client.c  fsm_mesh.c  fsm_tcp_server.c  global.c
esp32-firmware/main/: CMakeLists.txt  fsm_ap.c  fsm_camera.c  fsm_http_server.c  fsm_mesh.c  fsm_sta.c  fsm_tcp_server.c  global.c  main.c  sch_task.c  scheduler.c  task.c  tcp_processing.c
led_hc501/: led_hc501.kicad_pcb  led_hc501.kicad_prl  led_hc501.kicad_pro  led_hc501.kicad_sch
testing/: README.MD
testing/GPS-module/: README.MD
testing/before_config_http_client/: sdkconfig.old  tesing_server.py
testing/cam_http_client/: readme.md  (+2 more)
testing/cam_http_client/main/: CMakeLists.txt  fsm_camera.c  fsm_mesh.c  fsm_sta.c  main.c
testing/cam_http_client/main/include/: fsm_camera.h  fsm_mesh.h  fsm_sta.h  global.h  main.h
(+120 files in other folders)
